# SE-GRID-BUILDER

./: .gitignore  STARTUP.md  next.config.js  package.json  start-backend.ps1
.github/workflows/: ci.yml
public/workers/: layoutWorker.js
server/: .pre-commit-config.yaml  README.md  calibrations.db  pyproject.toml
server/app/: __init__.py  main.py
server/app/api/: deps.py
server/app/api/routers/: calib.py  grids.py  sim.py
server/app/core/: config.py
server/app/models/: grid.py  rtca.py  se.py  simulation.py  telemetry.py
server/app/services/: bad_data.py  calib_store.py  grid_store.py  job_registry.py  powerflow.py  rtca.py  scada_stream.py  state_est.py
server/grids/: 03d1e8a8-6061-46d9-b251-3ea00e2ecb1b.json  3268193f-ecc3-41ca-986d-a347a4c74f9f.json  76a7189f-4c14-4946-8562-b9932ebdadb8.json  README.md  a36c2176-94df-4f1f-ba0d-6b6483c0e40c.json  ae9a921f-4777-4f15-b694-080eb6f320fb.json  alberta-test.json  api-test.json  c150fc60-29ce-41da-bd94-7aa12c5c02c3.json  d9c884f9-ad09-4096-bffb-a39690d49b0c.json  df295e98-7288-4bb6-b9a4-dc7119b15bd4.json  rtca-debug.json  rtca-test.json  telemetry-test.json
server/tests/: conftest.py  test_calibration.py  test_health.py  test_rtca.py  test_rtca_stream.py  test_se.py  test_stream.py
src/app/: page.tsx
src/config/: navigation.ts
src/hooks/: useAuth.ts  useEventFeed.ts  useRTCAJobs.ts  useRTCAStream.ts  useRealtime.ts  useStateEstimator.ts  useTopology.ts  useTopologyData.ts  useTopologyLayout.ts  useTopologyLive.ts  useTopologySearch.ts  useWhatIf.ts
src/utils/: topologyUtils.ts
(+39 files in other folders)
